feat: Add json-server for mock API and fetch questions in Quiz component

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server --watch data/questions.json --port 5000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "json-server": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
